--- a/qc_sdg.html
+++ b/qc_sdg.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/sass/qc-sdg.css">
+    <script type="text/javascript" src="vendor/jquery-3.6.0/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="scripts/blockquote/blockquote.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Système de design</title>
@@ -237,7 +240,6 @@
                     }
                 </style>
                 <h2 id="grille">Grille de 8 px</h2>
-                <h3> Grille de 8 px - Bureau </h3>
                 <div class="qc-container-fluid">
                     <div class="qc-container">
                         <div class="qc-row">
@@ -352,28 +354,29 @@
             <!-- Citations -->
             <div class="container">
                 <h2 id="citations">Citations</h2>
-                <blockquote class="qc-blockquote-grand">
-                    <p class="qc-blockquote-quote-grand">I have to constantly use creativity and imagination to impart
+                <blockquote lang="en">
+                    <p>I have to constantly use creativity and imagination to impart
                         knowledge
                         to my students,
                         but that’s also what drives me on a daily basis.</p>
-                    <cite class="qc-blockquote-author-name">Karel</cite>
-                    <cite class="qc-blockquote-author-title">Teacher</cite>
                 </blockquote>
-
-                <blockquote class="qc-blockquote">
-                    <p class="qc-blockquote-quote">Voilà une excellente nouvelle pour la région du Nord-du-Québec. Grâce
+                <p>Karel
+                    <span>Teacher</span>
+                </p>
+                <blockquote>
+                    <p>Voilà une excellente nouvelle pour la région du Nord-du-Québec. Grâce
                         à cet
                         investissement majeur de notre gouvernement,
                         nous pourrons loger davantage de travailleurs et leurs familles, ce qui renforcera la vitalité
                         économique de nos communautés.</p>
-                    <cite class="qc-blockquote-author-name">Pierre Dufour</cite>
-                    <cite class="qc-blockquote-author-title">Ministre des Forêts, de la Faune et des Parcs, ministre
-                        responsable
-                        de la
-                        région de l’Abitibi-Témiscamingue et de la région du Nord-du-Québec et député
-                        d’Abitibi-Est</cite>
                 </blockquote>
+                <p>Pierre Dufour
+                    <span>Ministre des Forêts, de la Faune et des Parcs, ministre
+                    responsable
+                    de la
+                    région de l’Abitibi-Témiscamingue et de la région du Nord-du-Québec et député
+                    d’Abitibi-Est</span>
+                </p>
             </div>
 
             <hr>
