Refacto de la structure des répertoires

--- a/qc_catalog_sdg.html
+++ b/qc_catalog_sdg.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dist/css/qc-sdg.css">
-    <link rel="stylesheet" href="dist/css/qc-catalog-sdg.css">
+    <link rel="stylesheet" href="css/qc-sdg.css">
+    <link rel="stylesheet" href="css/qc-catalog-sdg.css">
     <title>Catalogue des composants du système de design gouvernemental</title>
 </head>
 <body>
