Retrait des citations, + renommage et restructuration

--- a/qc_catalog_sdg.html
+++ b/qc_catalog_sdg.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/qc-sdg.css">
-    <link rel="stylesheet" href="css/qc-catalog-sdg.css">
+    <link rel="stylesheet" href="html-catalog/scss/qc-catalog-sdg.css">
     <title>Catalogue des composants du système de design gouvernemental</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
                 <li><a href='#grille'>Grille de 8px</a></li>
                 <li><a href='#liens'>Liens</a></li>
                 <li><a href='#ombrages'>Ombrages</a></li>
-                <li><a href='#citations'>Citations</a></li>
+                <!--<li><a href='#citations'>Citations</a></li>-->
                 <li><a href='#images'>Images</a></li>
             </ul>
         </div>
@@ -299,8 +299,19 @@
 
 
         <h2 id="liens">Liens</h2>
+        <p>
+            <strong>Lien interne</strong> <br/>
+            <a href="#" class="">Règlement de pêche dans la zone 21.</a>
+        </p>
+        <p>
+            <strong>Survol, focus</strong> <br/>
+            <a href="#" class="pseudo-hover">Règlement de pêche dans la zone 21.</a>
+        </p>
+        <p>
+            <strong>Lien interne</strong> <br/>
+            <a href="#" class="">Règlement de pêche dans la zone 21.</a>
+        </p>
         <a href="#" class="">Règlement de pêche dans la zone 21.</a>
-
         <h2 id="ombrages">Ombrages</h2>
         <p><strong>Élévation 1</strong></p>
         <p>Usage : tuiles cliquables, boutons principaux</p>
@@ -319,7 +330,7 @@
         <p class="qc-shading-4 square-box">Élévation 4</p>
 
         <!-- Citations -->
-        <h2 id="citations">Citations</h2>
+        <!--<h2 id="citations">Citations</h2>
         <blockquote lang="en">
             <p>I have to constantly use creativity and imagination to impart
                 knowledge
@@ -342,16 +353,17 @@
             de la
             région de l’Abitibi-Témiscamingue et de la région du Nord-du-Québec et député
             d’Abitibi-Est</span>
-        </p>
+        </p>-->
 
         <!-- Images -->
         <h2 id="images">Images</h2>
         <div class="qc-gallery">
             <div class="qc-row">
                 <div class="qc-col-6">
-                    <figure class="qc-image">
-                        <img src="./icons/image-01.png" alt="Image avec légende">
-                        <figcaption class="qc-image-caption">
+                    <figure>
+                        <img src="html-catalog/icons/figure-sample.png"
+                             alt="Image avec légende">
+                        <figcaption>
                             <p>La légende de l'image <br>
                                 <em>La source de l'image</em>
                             </p>
