--- a/qc_catalog_sdg.html
+++ b/qc_catalog_sdg.html
@@ -19,7 +19,7 @@
                 <li><a href='#paragraphes'>Paragraphes</a></li>
                 <li><a href='#polices'>Polices de caractères</a></li>
                 <li><a href='#liste'>Liste</a></li>
-                <li><a href='#grille'>Grille de 8px</a></li>
+                <li><a href='#grille'>Grille horizontale</a></li>
                 <li><a href='#liens'>Liens</a></li>
                 <li><a href='#ombrages'>Ombrages</a></li>
                 <!--<li><a href='#citations'>Citations</a></li>-->
