Ajout du lien externe

--- a/qc_catalog_sdg.html
+++ b/qc_catalog_sdg.html
@@ -308,10 +308,10 @@
             <a href="#" class="pseudo-hover">Règlement de pêche dans la zone 21.</a>
         </p>
         <p>
-            <strong>Lien interne</strong> <br/>
-            <a href="#" class="">Règlement de pêche dans la zone 21.</a>
+            <strong>Lien externe</strong> <br/>
+            <a href="#" class="">Un long lien - réduire la taille de l’écran pour constater l’espace insécable devant l’icone de lien <span class="external-link-tail">externe. <img src="svg/external-link.svg"
         </p>
-        <a href="#" class="">Règlement de pêche dans la zone 21.</a>
+
         <h2 id="ombrages">Ombrages</h2>
         <p><strong>Élévation 1</strong></p>
         <p>Usage : tuiles cliquables, boutons principaux</p>
