Renommage de la trousse

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <span>--qc-piv-blue</span>
             </div>
         </div>
+
         <h3>Couleurs d’accent</h3>
         <div class="color-details">
             <div class="color-sample qc-bg-pink-accent"></div>
@@ -56,6 +57,7 @@
                 <span>--qc-blue-accent</span>
             </div>
         </div>
+
         <h3>Couleurs secondaires</h3>
         <div class="color-details">
             <div class="color-sample qc-bg-pale-blue"></div>
@@ -72,10 +74,10 @@
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-pale-grey"></div>
+            <div class="color-sample qc-bg-medium-blue"></div>
             <div class="color-description">
-                <strong>Gris pâle</strong><br/>
-                <span>--qc-pale-grey</span>
+                <strong>Bleu moyen</strong><br/>
+                <span>--qc-medium-blue</span>
             </div>
         </div>
         <div class="color-details">
@@ -86,10 +88,38 @@
             </div>
         </div>
         <div class="color-details">
+            <div class="color-sample qc-bg-pale-grey"></div>
+            <div class="color-description">
+                <strong>Gris pâle</strong><br/>
+                <span>--qc-pale-grey</span>
+            </div>
+        </div>
+        <div class="color-details">
             <div class="color-sample qc-bg-light-grey"></div>
             <div class="color-description">
                 <strong>Gris clair</strong><br/>
                 <span>--qc-light-grey</span>
+            </div>
+        </div>
+        <div class="color-details">
+            <div class="color-sample qc-bg-grey"></div>
+            <div class="color-description">
+                <strong>Gris</strong><br/>
+                <span>--qc-grey</span>
+            </div>
+        </div>
+        <div class="color-details">
+            <div class="color-sample qc-bg-medium-grey"></div>
+            <div class="color-description">
+                <strong>Gris moyen</strong><br/>
+                <span>--qc-medium-grey</span>
+            </div>
+        </div>
+        <div class="color-details">
+            <div class="color-sample qc-bg-dark-grey"></div>
+            <div class="color-description">
+                <strong>Gris foncé</strong><br/>
+                <span>--qc-dark-grey</span>
             </div>
         </div>
         <h3>Couleurs fonctionnelles</h3>
@@ -309,7 +339,8 @@
         </p>
         <p>
             <strong>Lien externe</strong> <br/>
-            <a href="#" class="">Un long lien - réduire la taille de l’écran pour constater l’espace insécable devant l’icone de lien <span class="external-link-tail">externe. <img src="svg/external-link.svg"
+            <a href="#" class="">Un long lien - réduire la taille de l’écran pour constater l’espace insécable devant l’icone de lien
+                <span class="external-link-tail">externe. <img src="svg/external-link.svg" alt="Cet hyperlien s’ouvrira dans une autre fenêtre"></span></a>
         </p>
 
         <h2 id="ombrages">Ombrages</h2>
