10 : modification apportées après validation des UX

--- a/index.html
+++ b/index.html
@@ -35,31 +35,6 @@
         <h2 id="couleurs">Couleurs</h2>
         <h3>Couleur principale</h3>
         <div class="color-details">
-            <div class="color-sample qc-bg-piv-blue"></div>
-            <div class="color-description">
-                <strong>Bleu piv</strong><br/>
-                <span>--qc-piv-blue</span>
-            </div>
-        </div>
-
-        <h3>Couleurs d’accent</h3>
-        <div class="color-details">
-            <div class="color-sample qc-bg-pink-accent"></div>
-            <div class="color-description">
-                <strong>Rose</strong><br/>
-                <span>--qc-pink</span>
-            </div>
-        </div>
-        <div class="color-details">
-            <div class="color-sample qc-bg-blue-accent"></div>
-            <div class="color-description">
-                <strong>Bleu</strong><br/>
-                <span>--qc-blue-accent</span>
-            </div>
-        </div>
-
-        <h3>Couleurs secondaires</h3>
-        <div class="color-details">
             <div class="color-sample qc-bg-pale-blue"></div>
             <div class="color-description">
                 <strong>Bleu pâle</strong><br/>
@@ -71,6 +46,20 @@
             <div class="color-description">
                 <strong>Bleu clair</strong><br/>
                 <span>--qc-light-blue</span>
+            </div>
+        </div>
+        <div class="color-details">
+            <div class="color-sample qc-bg-blue"></div>
+            <div class="color-description">
+                <strong>Bleu</strong><br/>
+                <span>--qc-blue</span>
+            </div>
+        </div>
+        <div class="color-details">
+            <div class="color-sample qc-bg-piv-blue"></div>
+            <div class="color-description">
+                <strong>Bleu piv</strong><br/>
+                <span>--qc-piv-blue</span>
             </div>
         </div>
         <div class="color-details">
@@ -87,6 +76,17 @@
                 <span>--qc-dark-blue</span>
             </div>
         </div>
+
+        <h3>Couleurs d’accent</h3>
+        <div class="color-details">
+            <div class="color-sample qc-bg-pink-accent"></div>
+            <div class="color-description">
+                <strong>Rose</strong><br/>
+                <span>--qc-pink</span>
+            </div>
+        </div>
+
+        <h3>Niveaux de gris</h3>
         <div class="color-details">
             <div class="color-sample qc-bg-pale-grey"></div>
             <div class="color-description">
@@ -122,12 +122,43 @@
                 <span>--qc-dark-grey</span>
             </div>
         </div>
+
         <h3>Couleurs fonctionnelles</h3>
+        <h4>Rouges</h4>
+        <div class="color-details">
+            <div class="color-sample qc-bg-pale-pink"></div>
+            <div class="color-description">
+                <strong>Rose pâle</strong><br/>
+                <span>--qc-pale-pink</span>
+            </div>
+        </div>
+        <div class="color-details">
+            <div class="color-sample qc-bg-pink"></div>
+            <div class="color-description">
+                <strong>Rose</strong><br/>
+                <span>--qc-pink</span>
+            </div>
+        </div>
         <div class="color-details">
             <div class="color-sample qc-bg-red"></div>
             <div class="color-description">
                 <strong>Rouge</strong><br/>
                 <span>--qc-red, --qc-error</span>
+            </div>
+        </div>
+        <div class="color-details">
+            <div class="color-sample qc-bg-dark-red"></div>
+            <div class="color-description">
+                <strong>Rouge foncé</strong><br/>
+                <span>--qc-dark-red, --qc-danger</span>
+            </div>
+        </div>
+        <h4>Verts</h4>
+        <div class="color-details">
+            <div class="color-sample qc-bg-pale-green"></div>
+            <div class="color-description">
+                <strong>Vert pâle</strong><br/>
+                <span>--qc-pale-green</span>
             </div>
         </div>
         <div class="color-details">
@@ -138,10 +169,18 @@
             </div>
         </div>
         <div class="color-details">
-            <div class="color-sample qc-bg-dark-red"></div>
+            <div class="color-sample qc-bg-dark-green"></div>
             <div class="color-description">
-                <strong>Rouge foncé</strong><br/>
-                <span>--qc-dark-red, --qc-danger</span>
+                <strong>Vert foncé</strong><br/>
+                <span>--qc-dark-green</span>
+            </div>
+        </div>
+        <h4>Jaunes</h4>
+        <div class="color-details">
+            <div class="color-sample qc-bg-pale-yellow"></div>
+            <div class="color-description">
+                <strong>Jaune pâle</strong><br/>
+                <span>--qc-pale-yellow</span>
             </div>
         </div>
         <div class="color-details">
@@ -149,13 +188,6 @@
             <div class="color-description">
                 <strong>Jaune</strong><br/>
                 <span>--qc-yellow</span>
-            </div>
-        </div>
-        <div class="color-details">
-            <div class="color-sample qc-bg-pale-yellow"></div>
-            <div class="color-description">
-                <strong>Jaune pâle</strong><br/>
-                <span>--qc-pale-yellow</span>
             </div>
         </div>
         <div class="color-details">
