- modification des spacers (supression des xxl-*) - Ajout de l'élévation 0 dans les ombrages - Renommage de quelques variables de typographie

--- a/index.html
+++ b/index.html
@@ -376,6 +376,11 @@
         </p>
 
         <h2 id="ombrages">Ombrages</h2>
+
+        <p><strong>Élévation 0</strong></p>
+        <p>Usage : encadrés</p>
+        <p class="qc-shading-0 square-box">Élévation 0</p>
+
         <p><strong>Élévation 1</strong></p>
         <p>Usage : tuiles cliquables, boutons principaux</p>
         <p class="qc-shading-1 square-box">Élévation 1</p>
