--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <h2 id="liens">Liens</h2>
         <p>
             <strong>Lien interne</strong> <br/>
-            <a href="#" class="">Règlement de pêche dans la zone 21.</a>
+            <a href="#" class="not-visited">Règlement de pêche dans la zone 21.</a>
         </p>
         <p>
             <strong>Survol, focus</strong> <br/>
@@ -371,8 +371,12 @@
         </p>
         <p>
             <strong>Lien externe</strong> <br/>
-            <a href="#" class="">Un long lien - réduire la taille de l’écran pour constater l’espace insécable devant l’icone de lien
+            <a href="#" class="not-visited">Un long lien - réduire la taille de l’écran pour constater l’espace insécable devant l’icone de lien
                 <span class="external-link-tail">externe. <img src="svg/external-link.svg" alt="Cet hyperlien s’ouvrira dans une autre fenêtre"></span></a>
+        </p>
+        <p>
+            <strong>Liens visités</strong> <br/>
+            <a href="#" class="visited">Règlement de pêche dans la zone 21.</a>
         </p>
 
         <h2 id="ombrages">Ombrages</h2>
